--- a/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
+++ b/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
@@ -239,7 +239,7 @@ ggplot(data=exam_data,
 ggplot(data=exam_data, 
        aes(y = MATHS, x= RACE)) +
   geom_boxplot() +
-  geom_point(stat = "summary", fun = "mean", colour ="red", size=3)               
+  geom_point(stat = "summary", fun = "mean", colour ="red", size=3)
 ```
 
 ## (Alternate 3) Science and Race Boxplots
@@ -263,4 +263,15 @@ ggplot(data=exam_data, aes(y = SCIENCE, x = GENDER)) +
 ```{r}
 ggplot(data=exam_data, aes(x = SCIENCE, fill = GENDER)) +
   geom_histogram(bins=15, color="grey30")
+```
+## (Alternate 6) Density plot with Math
+```{r}
+ggplot(data=exam_data, aes(x = MATHS)) +
+  geom_density(fill="#69b3a2", color="#e9ecef", alpha=0.8)
+```
+## (Alternate 7) Scatterplot of Science & Maths with geom_rug()
+```{r}
+ggplot(data=exam_data, aes(x = MATHS, y = SCIENCE)) +
+  geom_point() +
+  geom_rug(col="steelblue",alpha=0.1, size=1.5)
 ```
