Commiting extrafont library to Ex02

--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
@@ -4,7 +4,9 @@ author: "Andre Ong Jia Kang"
 ---
 
 # 2.Beyond ggplot2 Fundamentals
-
+```{r}
+library(extrafont)
+```
 ## Install and launching R packages
 
 ```{r}
