Added date/date-modified to yml. Editted Hands-on 01 typo

--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
@@ -22,7 +22,8 @@ exam_data <- read_csv("data/Exam_data.csv")
 
 ```
 
-## 2.3 Beyond ggplot2 Annotation: ggrepel 2.3.1 Working with ggrepel
+## 2.3 Beyond ggplot2 Annotation: ggrepel 
+###2.3.1 Working with ggrepel
 
 ```{r}
 ggplot(data=exam_data, 
